Trade offers and update routes update
Switched from 3 separated accept/reject/finish trade offer routes to single update_status route
Switched from put to patch everywhere
Updated api specification and tests to correspondence with new logic
